# pmemo

./: .gitignore  PMemo_System_Upgrade_Implementation_Guide.md  Upgrade.md  __init__.py  comprehensive_test.py  key_term.py  long_term.py  main.py  memoryos.py  mid_term.py  prompts.py  pyproject.toml  requirements.txt  retriever.py  short_term.py  storage_provider.py  updater.py  utils.py
eval/: config.py  dynamic_update.py  evalution_loco.py  long_term_memory.py  main_loco_parse.py  mid_term_memory.py  quick_loco_results.json  short_term_memory.py  utils.py
eval/mem_tmp_loco_final/: conv-26_short_term.json
eval/mem_tmp_loco_final_chroma/20260226_110405/conv-26/chroma_storage/: chroma.sqlite3  metadata_conv-26_locomo_Melanie.json
scripts/: run_locomo_eval.sh  setup_eval_env.sh
upgrade_versions/: v1_data_layer_upgrade.md  v2_key_memory_module.md  v3_midterm_promotion_and_rollup.md  v4_retrieval_and_context_order.md  v5_orchestration_api_and_audit.md  v8_feature_completion_round2.md  v9_runtime_logic_bugfix.md
